--- a/public/index.html
+++ b/public/index.html
@@ -709,7 +709,7 @@
 
         <p>
           The finalists of each category have been selected and you can help decide
-          who the winner is. To vote, register with a google or facebook account, only one register is allowed per person. The public vote closes on April 25. 
+          who the winner is. To vote, register with a google account or a phone number, only one registration is allowed per person. The public vote closes on April 25. 
         </p>
 
         <!-- <div class="select-wrap">
